--- a/BACKEND/.env
+++ b/BACKEND/.env
@@ -1,1 +1,2 @@
-MONGO_URL=mongodb+srv://rehan_999:rehan6025@cluster0.1t1hhlg.mongodb.net/urlshortener?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://rehan_999:rehan6025@cluster0.1t1hhlg.mongodb.net/urlshortener?retryWrites=true&w=majority&appName=Cluster0
+APP_URL=http://localhost:3000/
