--- a/BACKEND/.env
+++ b/BACKEND/.env
@@ -1,2 +1,3 @@
 MONGO_URI=mongodb+srv://rehan_999:rehan6025@cluster0.1t1hhlg.mongodb.net/urlshortener?retryWrites=true&w=majority&appName=Cluster0
 APP_URL=http://localhost:3000/
+JWT_SECRET=rehanahmed
