again changed vercel.json for deployment

--- a/FRONTEND/vercel.json
+++ b/FRONTEND/vercel.json
@@ -2,7 +2,7 @@
     "builds": [
         {
             "src": "package.json",
-            "use": "@vercel/node",
+            "use": "@vercel/static-build",
             "config": {
                 "buildCommand": "npm run build",
                 "outputDirectory": "dist",
@@ -10,5 +10,11 @@
             }
         }
     ],
-    "framework": "vite"
+    "framework": "vite",
+    "rewrites": [
+        {
+            "source": "/(.*)",
+            "destination": "/index.html"
+        }
+    ]
 }
